--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,31 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+}
+
+header {
+  height: 90px;
+  background-color: #2c3e50;
+}
+
+li {
+  list-style: none;
+  padding: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+.debug {
+  background-color: rgba(127, 255, 212, 0.384);
+  border: 1px solid black;
+  min-height: 90px;
 }
