--- a/assets/style.css
+++ b/assets/style.css
@@ -31,9 +31,14 @@ img{
   border-radius: 100%;
 }
 
+footer{
+  color: white;
+}
+
 .sc-container{
-  width:1140px ;
+  max-width:1140px ;
   margin: 0 auto;
+  height: 100%;
 }
 
 .sc-jumbotron{
@@ -70,12 +75,13 @@ footer .top{
 
 footer .bottom{
   background-color:#2c3e50 ;
-  height: 200px;
+  height: 100px;
 }
 
 
 /* UTILITIES */
 .debug {
-  background-color: rgba(127, 255, 212, 0.384);
+  background-color: rgba(61, 0, 97, 0.384);
   border: 1px solid black;
+  height: 50px;
 }
