--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,7 @@
 /* GENERAL */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 header {
   height: 90px;
   background-color: #2c3e50;
-  color: white;
 }
 
 h2{
@@ -20,10 +13,6 @@ li {
   padding: 20px;
 }
 
-a {
-  text-decoration: none;
-  color: white;
-}
 
 img{
   width: 200px;
@@ -71,6 +60,27 @@ footer{
   max-width: 100%;
   border-radius: 25px;
   margin: 15px 3px;
+}
+
+/* NAV */
+.navbar-brand.rl-nav-link,
+.nav-link.rl-nav-link{
+  color: white;
+}
+
+.navbar-brand.rl-nav-link:hover,
+.nav-link.rl-nav-link:hover{
+  color: rgba(255, 255, 255, 0.664);
+}
+
+.navbar-toggler-icon.rl-toggler{
+  filter: invert(71%) sepia(0%) saturate(6686%) hue-rotate(316deg) brightness(83%) contrast(47%);
+}
+
+.navbar-toggler.rl-toggler{
+ border: 1px solid white;
+ font-size: 1.1rem;
+ padding: 2px 6px;
 }
 
 /* ABOUT */
