--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,23 +4,6 @@ header {
   background-color: #2c3e50;
 }
 
-h2{
-  text-align: center;
-}
-
-li {
-  list-style: none;
-  padding: 20px;
-}
-
-
-img{
-  width: 200px;
-  height: 200px;
-  background-color: rgb(0, 0, 75);
-  border-radius: 100%;
-}
-
 footer{
   color: white;
 }
@@ -31,6 +14,14 @@ footer{
   border: 1px solid black;
   height: 50px;
 }
+
+
+/* .line-sx{
+  width: 100px;
+  height: 5px;
+  border-radius: 25px;
+  color: white;
+} */
 
 /* BUTTON */
 .btn{
@@ -44,23 +35,9 @@ footer{
   height: 100%;
 }
 
-/* JUMBOTRON */
-.sc-jumbotron{
-  background-color:#1abc9c ;
-  height: 400px;
-  text-align: center;
-  color: white;
-}
 
-/* MAIN */
-/* PORTFOLIO */
-.sc-card{
-  background-color: blanchedalmond;
-  height: 200px;
-  max-width: 100%;
-  border-radius: 25px;
-  margin: 15px 3px;
-}
+
+
 
 /* NAV */
 .navbar-brand.rl-nav-link,
@@ -78,10 +55,62 @@ footer{
 }
 
 .navbar-toggler.rl-toggler{
- border: 1px solid white;
+  border: 1px solid white;
  font-size: 1.1rem;
  padding: 2px 6px;
 }
+/* /NAV */
+
+/* JUMBOTRON */
+.rl-jumbotron{
+  background-color:#1abc9c ;
+  height: 490px;
+  color: white;
+}
+
+.avatar img{
+  width: 230px;
+}
+
+.line_container{
+  width: 100%;
+  margin: 0 auto;
+}
+
+.line_sx{
+  width: 100%;
+  height: 4px;
+  border-radius: 25px;
+  background-color: white;
+}
+
+.line_dx{
+  width: 100%;
+  height: 4px;
+  border-radius: 25px;
+  background-color: white;
+}
+
+.line_container i{
+  font-size: 1.5rem;
+}
+
+/* MAIN */
+/* PORTFOLIO */
+#portfolio .line_sx,
+#portfolio .line_dx{
+  background-color: black;
+}
+.sc-card{
+  background-color: blanchedalmond;
+  height: 200px;
+  max-width: 100%;
+  border-radius: 25px;
+  margin: 15px 3px;
+}
+
+
+
 
 /* ABOUT */
 #about{
