--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,29 +15,11 @@ footer{
   height: 50px;
 }
 
-
-/* .line-sx{
-  width: 100px;
-  height: 5px;
-  border-radius: 25px;
-  color: white;
-} */
-
-/* BUTTON */
-.btn{
-  text-align: center;
-}
-
 /* CONTAINER CUSTOM */
-.sc-container{
-  max-width:1140px ;
+.rl-container{
+  max-width:60% ;
   margin: 0 auto;
-  height: 100%;
 }
-
-
-
-
 
 /* NAV */
 .navbar-brand.rl-nav-link,
@@ -101,40 +83,61 @@ footer{
 #portfolio .line_dx{
   background-color: black;
 }
-.sc-card{
+
+.rl-card img{
   background-color: blanchedalmond;
-  height: 200px;
-  max-width: 100%;
-  border-radius: 25px;
   margin: 15px 3px;
 }
-
-
-
 
 /* ABOUT */
 #about{
   background-color:#1abc9c ;
+  color: white;
 }
 
 #about p{
   padding-top: 20px;
+  text-align: justify;
 }
 
 /* CONTACT */
-#contact span{
-  display: block;
+#contact .rl-container{
+  width: 50%;
+}
+
+#contact .line_sx,
+#contact .line_dx{
+  background-color: black;
+}
+
+.form-control.rl-form-control{
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-radius: 0;
+}
+
+.btn-success.rl-btn{
+  background-color: #1abc9c;
+  border: none;
 }
 
 /* FOOTER */
 /* TOP */
+footer a{
+  color: white;
+}
+
 footer .top{
   background-color:#3a546d ;
-  height: 230px;
 }
 
 /* BOTTOM */
 footer .bottom{
   background-color:#2c3e50 ;
   height: 100px;
+}
+
+footer .bottom i{
+  font-size: 0.6rem;
 }
