--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,16 @@ footer a{
   color: white;
 }
 
+footer #start{
+  color:#1abc9c;
+  text-decoration: none;
+}
+
+footer a:hover{
+  color: rgb(245, 245, 245);
+}
+
+
 footer .top{
   background-color:#3a546d ;
 }
