--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,19 +55,19 @@ footer{
 }
 
 .line_container{
-  width: 100%;
+  width: 70%;
   margin: 0 auto;
 }
 
 .line_sx{
-  width: 100%;
+  width: 170px;
   height: 4px;
   border-radius: 25px;
   background-color: white;
 }
 
 .line_dx{
-  width: 100%;
+  width: 170px;
   height: 4px;
   border-radius: 25px;
   background-color: white;
@@ -136,7 +136,6 @@ footer #start{
 footer a:hover{
   color: rgb(245, 245, 245);
 }
-
 
 footer .top{
   background-color:#3a546d ;
